@@ -130,8 +130,6 @@ public class LawnERC extends ERC
         return true;
         }
 
-    public String name() { return ""; } // I'm the only ERC class, this is fine
-
     public String toStringForHumans()
         { return "[" + x + "," + y + "]"; }
 
